# ghost-rails-nyc

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  STEERING.md  TASKS.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  chat.py  features.py  health.py  stations.py
backend/app/geo/: __init__.py  features.py  search.py  stations.py
backend/app/models/: __init__.py  chat.py  embeddings.py  errors.py  factory.py
backend/app/models/providers/: __init__.py  gemini.py  groq.py  http.py  ollama.py
backend/app/rag/: __init__.py  answer.py  documents.py  index.py  prompts.py  retriever.py
backend/app/safety/: __init__.py  policy.py
backend/app/services/: health.py
backend/scripts/: build_index.py  evaluate.py
backend/tests/: test_chat_api.py  test_config.py  test_evaluation_data.py  test_feature_api.py  test_features.py  test_health.py  test_model_factory.py  test_rag_index.py  test_safety.py  test_sources.py  test_stations_api.py
data/eval/: questions.jsonl
data/features/: features.geojson
data/processed/: current_stations.json
data/sources/: bmt_brooklyn.md  city_hall_station.md  ind_second_system.md  irt_closed_stations.md  manhattan_els.md  polo_grounds_shuttle.md  rail_corridors.md  source_manifest.json  transit_museum.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  env.d.ts  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/styles/: main.css
scripts/: bootstrap.sh  dev.sh  start_backend.sh  start_frontend.sh
(+4 files in other folders)
